--- a/iamhere/iamhere.csproj
+++ b/iamhere/iamhere.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Requests\AddressAttribute.cs" />
     <Compile Include="Requests\PoliticalView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Requests\GeocodingRequest.cs" />
