--- a/iamhere/iamhere.csproj
+++ b/iamhere/iamhere.csproj
@@ -44,11 +44,14 @@
     <Compile Include="Common\GeographicalBoundingBox.cs" />
     <Compile Include="Common\GeographicalPoint.cs" />
     <Compile Include="Common\GeographicalProximity.cs" />
+    <Compile Include="Common\ResponseFormat.cs" />
     <Compile Include="Requests\AddressAttribute.cs" />
+    <Compile Include="Requests\Geocoding\GeocodingRequestStringBuilder.cs" />
+    <Compile Include="Requests\IRequestStringBuilder.cs" />
     <Compile Include="Requests\LocationAttribute.cs" />
     <Compile Include="Requests\PoliticalView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Requests\GeocodingRequest.cs" />
+    <Compile Include="Requests\Geocoding\GeocodingRequest.cs" />
     <Compile Include="Requests\Request.cs" />
     <Compile Include="Requests\ResponseAttribute.cs" />
   </ItemGroup>
