--- a/iamhere/iamhere.csproj
+++ b/iamhere/iamhere.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Responses\Geocoding\Contract\IMetadata.cs" />
     <Compile Include="Responses\Geocoding\Contract\IResult.cs" />
     <Compile Include="Responses\Geocoding\Contract\IView.cs" />
+    <Compile Include="Responses\Geocoding\Raw\LocationType.cs" />
     <Compile Include="Responses\Geocoding\Raw\HereResponse.cs" />
     <Compile Include="Responses\Geocoding\Raw\AdditionalData.cs" />
     <Compile Include="Responses\Geocoding\Raw\Address.cs" />
